--- a/TojoMobile/projects/TJTeamListViewController.xib
+++ b/TojoMobile/projects/TJTeamListViewController.xib
@@ -24,13 +24,6 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rYF-gt-rw1">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K03-2f-W6x">
-                            <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                            <state key="normal" title="创建团队">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ky9-ba-ber">
                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                             <constraints>
@@ -50,7 +43,48 @@
                             <variation key="heightClass=regular-widthClass=compact">
                                 <mask key="constraints">
                                     <include reference="OPB-5q-TrV"/>
-                                    <include reference="fiu-AI-G2n"/>
+                                    <exclude reference="fiu-AI-G2n"/>
+                                </mask>
+                            </variation>
+                        </button>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="points.png" translatesAutoresizingMaskIntoConstraints="NO" id="kGW-MK-Ika">
+                            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="5" id="7a4-HY-diW"/>
+                            </constraints>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="7a4-HY-diW"/>
+                                </mask>
+                            </variation>
+                            <variation key="heightClass=regular-widthClass=compact">
+                                <mask key="constraints">
+                                    <include reference="7a4-HY-diW"/>
+                                </mask>
+                            </variation>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K03-2f-W6x">
+                            <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="49" id="KeN-PB-Uzv">
+                                    <variation key="heightClass=regular-widthClass=compact" constant="48"/>
+                                </constraint>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="49" id="uYc-qg-2ZB"/>
+                            </constraints>
+                            <state key="normal" title="创建团队">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="KeN-PB-Uzv"/>
+                                    <exclude reference="uYc-qg-2ZB"/>
+                                </mask>
+                            </variation>
+                            <variation key="heightClass=regular-widthClass=compact">
+                                <mask key="constraints">
+                                    <exclude reference="KeN-PB-Uzv"/>
+                                    <include reference="uYc-qg-2ZB"/>
                                 </mask>
                             </variation>
                         </button>
@@ -58,52 +92,87 @@
                     <color key="backgroundColor" red="0.1176470588" green="0.76470588240000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="Ky9-ba-ber" firstAttribute="top" secondItem="K03-2f-W6x" secondAttribute="top" id="15Q-ZE-veS"/>
+                        <constraint firstAttribute="trailing" secondItem="Ky9-ba-ber" secondAttribute="trailing" id="5Le-6q-DrO"/>
                         <constraint firstItem="K03-2f-W6x" firstAttribute="leading" secondItem="rYF-gt-rw1" secondAttribute="leading" id="7oA-kc-waw"/>
                         <constraint firstItem="Ky9-ba-ber" firstAttribute="top" secondItem="rYF-gt-rw1" secondAttribute="top" id="7pm-dg-R6e"/>
+                        <constraint firstItem="Ky9-ba-ber" firstAttribute="leading" secondItem="kGW-MK-Ika" secondAttribute="trailing" constant="2" id="B7w-yM-IOk"/>
                         <constraint firstAttribute="trailing" secondItem="Ky9-ba-ber" secondAttribute="trailing" id="Ehq-Wy-WCB"/>
+                        <constraint firstItem="Ky9-ba-ber" firstAttribute="top" secondItem="rYF-gt-rw1" secondAttribute="top" id="Fhb-6u-mN8"/>
+                        <constraint firstItem="K03-2f-W6x" firstAttribute="top" secondItem="rYF-gt-rw1" secondAttribute="top" id="HRP-aQ-OWm"/>
+                        <constraint firstAttribute="bottom" secondItem="Ky9-ba-ber" secondAttribute="bottom" id="HVM-6U-h7H"/>
                         <constraint firstItem="Ky9-ba-ber" firstAttribute="leading" secondItem="K03-2f-W6x" secondAttribute="trailing" id="K1T-mo-Rrq"/>
+                        <constraint firstAttribute="bottom" secondItem="K03-2f-W6x" secondAttribute="bottom" id="McY-u8-Ohx"/>
                         <constraint firstAttribute="bottom" secondItem="Ky9-ba-ber" secondAttribute="bottom" id="SW4-jS-fOs"/>
                         <constraint firstAttribute="height" constant="49" id="ShX-PR-vhA"/>
+                        <constraint firstItem="kGW-MK-Ika" firstAttribute="top" secondItem="rYF-gt-rw1" secondAttribute="top" constant="11" id="T3j-Jq-tYR"/>
                         <constraint firstItem="Ky9-ba-ber" firstAttribute="firstBaseline" secondItem="K03-2f-W6x" secondAttribute="baseline" id="YaQ-NI-5vF"/>
-                        <constraint firstItem="Ky9-ba-ber" firstAttribute="centerY" secondItem="K03-2f-W6x" secondAttribute="centerY" id="asS-wU-tPV"/>
-                        <constraint firstItem="Ky9-ba-ber" firstAttribute="baseline" secondItem="K03-2f-W6x" secondAttribute="firstBaseline" id="iNv-qz-Np4"/>
+                        <constraint firstItem="K03-2f-W6x" firstAttribute="leading" secondItem="rYF-gt-rw1" secondAttribute="leading" id="YxB-cm-Lxd"/>
+                        <constraint firstAttribute="bottom" secondItem="kGW-MK-Ika" secondAttribute="bottom" constant="10" id="aOA-5v-uCh"/>
+                        <constraint firstAttribute="centerX" secondItem="kGW-MK-Ika" secondAttribute="centerX" id="bSX-Me-Cpf"/>
+                        <constraint firstItem="kGW-MK-Ika" firstAttribute="leading" secondItem="K03-2f-W6x" secondAttribute="trailing" constant="1" id="geL-pu-f9s"/>
+                        <constraint firstItem="K03-2f-W6x" firstAttribute="top" secondItem="rYF-gt-rw1" secondAttribute="top" id="k3M-Dv-Vi9"/>
+                        <constraint firstAttribute="bottom" secondItem="K03-2f-W6x" secondAttribute="bottom" constant="1" id="tlT-Wy-mrz"/>
                         <constraint firstAttribute="bottom" secondItem="Ky9-ba-ber" secondAttribute="bottom" id="uJu-lB-ZKn"/>
                     </constraints>
                     <variation key="default">
                         <mask key="subviews">
-                            <exclude reference="K03-2f-W6x"/>
                             <exclude reference="Ky9-ba-ber"/>
+                            <exclude reference="kGW-MK-Ika"/>
+                            <exclude reference="K03-2f-W6x"/>
                         </mask>
                         <mask key="constraints">
                             <exclude reference="ShX-PR-vhA"/>
                             <exclude reference="7oA-kc-waw"/>
+                            <exclude reference="HRP-aQ-OWm"/>
+                            <exclude reference="McY-u8-Ohx"/>
+                            <exclude reference="YxB-cm-Lxd"/>
+                            <exclude reference="k3M-Dv-Vi9"/>
+                            <exclude reference="tlT-Wy-mrz"/>
+                            <exclude reference="T3j-Jq-tYR"/>
+                            <exclude reference="aOA-5v-uCh"/>
+                            <exclude reference="bSX-Me-Cpf"/>
+                            <exclude reference="geL-pu-f9s"/>
                             <exclude reference="15Q-ZE-veS"/>
+                            <exclude reference="5Le-6q-DrO"/>
                             <exclude reference="7pm-dg-R6e"/>
+                            <exclude reference="B7w-yM-IOk"/>
                             <exclude reference="Ehq-Wy-WCB"/>
+                            <exclude reference="Fhb-6u-mN8"/>
+                            <exclude reference="HVM-6U-h7H"/>
                             <exclude reference="K1T-mo-Rrq"/>
                             <exclude reference="SW4-jS-fOs"/>
                             <exclude reference="YaQ-NI-5vF"/>
-                            <exclude reference="asS-wU-tPV"/>
-                            <exclude reference="iNv-qz-Np4"/>
                             <exclude reference="uJu-lB-ZKn"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
                         <mask key="subviews">
-                            <include reference="K03-2f-W6x"/>
                             <include reference="Ky9-ba-ber"/>
+                            <include reference="kGW-MK-Ika"/>
+                            <include reference="K03-2f-W6x"/>
                         </mask>
                         <mask key="constraints">
                             <include reference="ShX-PR-vhA"/>
                             <include reference="7oA-kc-waw"/>
-                            <include reference="15Q-ZE-veS"/>
+                            <include reference="HRP-aQ-OWm"/>
+                            <exclude reference="McY-u8-Ohx"/>
+                            <include reference="YxB-cm-Lxd"/>
+                            <include reference="k3M-Dv-Vi9"/>
+                            <exclude reference="tlT-Wy-mrz"/>
+                            <include reference="T3j-Jq-tYR"/>
+                            <include reference="aOA-5v-uCh"/>
+                            <include reference="bSX-Me-Cpf"/>
+                            <include reference="geL-pu-f9s"/>
+                            <exclude reference="15Q-ZE-veS"/>
+                            <include reference="5Le-6q-DrO"/>
                             <include reference="7pm-dg-R6e"/>
+                            <include reference="B7w-yM-IOk"/>
                             <include reference="Ehq-Wy-WCB"/>
-                            <include reference="K1T-mo-Rrq"/>
+                            <include reference="Fhb-6u-mN8"/>
+                            <include reference="HVM-6U-h7H"/>
+                            <exclude reference="K1T-mo-Rrq"/>
                             <include reference="SW4-jS-fOs"/>
                             <include reference="YaQ-NI-5vF"/>
-                            <include reference="asS-wU-tPV"/>
-                            <include reference="iNv-qz-Np4"/>
                             <include reference="uJu-lB-ZKn"/>
                         </mask>
                     </variation>
@@ -151,4 +220,7 @@
             </variation>
         </view>
     </objects>
+    <resources>
+        <image name="points.png" width="16" height="104"/>
+    </resources>
 </document>
